refactor: cleanup & test deploy vercel
